exports[`create token by typing non empty string and clicking suggestion`] = `
<div>
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing comma`] = `
<div>
  <div>
    <span
      onDoubleClick={[Function]}>
      <span>
        insert another
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing enter`] = `
<div>
  <div>
    <span
      onDoubleClick={[Function]}>
      <span>
        insert another
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing enter for highlighted suggestion`] = `
<div>
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing tab`] = `
<div>
  <div>
    <span
      onDoubleClick={[Function]}>
      <span>
        insert another
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`delete token by backspacing when input is empty`] = `
<div>
  <div>
    <span
      onDoubleClick={[Function]}>
      <span>
        delete me
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`delete token by clicking delete button`] = `
<div>
  <div>
    <span
      onDoubleClick={[Function]}>
      <span>
        delete me
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`edit token by double clicking on tag and typing`] = `
<div>
  <div>
    <span
      onDoubleClick={[Function]}>
      <span>
        edit me
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`hide suggestions list by pressing escape`] = `
<div>
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`show input placeholder by rendering`] = `
<div>
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        Add Tag
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Add Tag"
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`show suggestions list by typing non empty string`] = `
<div>
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;
